# cerealizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: cerealizer.h
src/: cerealizer.cpp
tests/: CMakeLists.txt  general_test.cpp  primitives_test.cpp  stl_test.cpp  tests_test.cpp
